--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+
+    // paging3
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
 }
